fix minor errors

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
           path: backend/src/main/resources/static
 
       - name: Setup JDK
-      - uses: actions/setup-java@v4
+        uses: actions/setup-java@v4
         with:
           java-version: "21"
           distribution: "temurin"
@@ -87,6 +87,3 @@ jobs:
       - name: Trigger Render.com Deployment
         run: |
           curl -X POST ${{secrets.RENDER_DEPLOY_HOOK}}
-
-
-
